--- a/src/Style/Component.scss
+++ b/src/Style/Component.scss
@@ -396,14 +396,18 @@
 
       .showcase-thumb {
         cursor: pointer;
-        transition: transform 0.3s ease;
+        transition: all 0.5s ease;
+        outline: 1px solid transparent;
+        border-radius: 5px;
 
         &:hover {
-          transform: scale(1.05);
+          // transform: scale(1.05);
+          outline: 1px solid var(--secAccent);
+
         }
 
         &.active {
-          outline: 3px solid #ff9b00;
+          outline: 1px solid var(--secAccent);
         }
 
         img {
@@ -411,7 +415,7 @@
           aspect-ratio: 16/9;
           -o-object-fit: cover;
              object-fit: cover;
-          border-radius: 4px;
+          border-radius: 5px;
         }
 
         span {
