--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -478,7 +478,8 @@
       color: rgb(241, 204, 186);
       border-radius: 1rem;
       cursor: pointer;
-      width: calc(100% - 1.25rem);
+      // width: calc(100% - 1.25rem);
+      width: auto;
       opacity: 0;
       visibility: hidden;
       touch-action: none;
@@ -486,15 +487,35 @@
       text-align: left;
       transition: all 0.2s ease;
 
+      .sidebar-header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1rem;
+      }
+      hr{
+        height: 30px;
+        width: 1px;
+        opacity: 0.25;
+        background-color: var(--secAccent);
+        outline: none;
+        border: none;
+      }
+
+      .drawer-header {
+        all: unset;
+        width: 100%;
+      }
+
       h3 {
         margin: 0;
-        font-size: 1.8rem;
+        font-size: 1rem;
         color: $accent-color;
-        margin-bottom: 0.5rem;
+        // margin-bottom: 0.5rem;
       }
       .label {
         display: block;
-        font-size: 0.7rem;
+        font-size: 0.5rem;
         opacity: 0.7;
         text-transform: uppercase;
       }
